fix: add win button in last row

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                         <button class="button button_special button_special_space button_light-orange"
                             data-value="Space"></button>
                         <button class="button button_special button_special_alt" data-value="Alt">Alt</button>
+                        <button class="button button_special button_special_win" data-value="Win">Win</button>
                         <button class="button button_special button_special_ctrl" data-value="Ctrl">Ctrl</button>
                     </div>
                 </div>
