fix: make constructor module element

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keyboard</title>
     <link rel="stylesheet" href="./main.css">
-    <script src="./scripts/constructor.js" defer></script>
+    <script src="./main.js" type="module" defer></script>
 </head>
 
-<body id='body'>
+<body>
 
 </body>
 
